<resources>
    <string name="app_name">NongStore</string>
    <string name="image">image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cart">TODO</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="keranjang_kosong">Keranjang Kosong</string>
    <string name="nama_profile">Nama Profile</string>
    <string name="indonesia">Indonesia</string>
    <string name="detail_account">Detail Account</string>
    <string name="alamat">Alamat</string>
    <string name="name">Nama</string>
    <string name="telephone">Telephone</string>
    <string name="umur">Umur</string>
    <string name="kelamin">Kelamin</string>
    <string name="lgnats">lgnats</string>
    <string name="lgnbwh">lgnbwh</string>
    <string name="ktklgn" />
    <string name="ktkpass">ktkpass</string>
    <string name="sgnup">sgnup</string>
    <string name="bwh1ads" />
    <string name="lgnbutt">lgnbutt</string>
    <string name="c2">c2</string>
    <string name="c1">c1</string>
    <string name="c3">c3</string>
    <string name="c3a">c3a</string>
    <string name="c5">c5</string>
    <string name="c4">c4</string>
    <string name="c6">c6</string>
    <string name="c6a">c6a</string>
    <string name="c7">c7</string>
    <string name="c8">c8</string>
    <string name="c9">c9</string>
    <string name="c9a">c9a</string>
    <string name="home">Home</string>
    <string name="produk_populer">Produk Populer</string>
    <string name="terbaru">Terbaru</string>
    <string name="dilihat">Dilihat</string>
    <string name="phone_number">Phone Number</string>
    <string name="registrasi">Registrasi</string>
    <string name="back">image</string>
    <string name="singup">singup</string>
    <string name="kiriback">kiriback</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="todo">TODO</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="product">Product</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
</resources>
